# python-synology

./: .cookiecutter.json  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.rst  LICENSE.rst  LICENSE.txt  README.md  README.rst  codecov.yml  get_data_for_tests.py  noxfile.py  pylintrc  pyproject.toml  requirements.txt  requirements_test.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS
.github/workflows/: constraints.txt  release.yml  tests.yml
SynologyDSM/: SynologyDSM.py  __init__.py  helpers.py
SynologyDSM/api/: __init__.py
SynologyDSM/api/Core/: Utilization.py
SynologyDSM/api/DSM/: Information.py
SynologyDSM/api/Storage/: Storage.py
docs/: conf.py  index.rst  reference.rst
scripts/: clean.sh  publish.sh  setup
src/synology_dsm/: __init__.py  const.py  exceptions.py  helpers.py  synology_dsm.py
src/synology_dsm/api/backup/: __init__.py  const.py  task.py
src/synology_dsm/api/core/: certificate.py  security.py  share.py  system.py  upgrade.py  utilization.py
src/synology_dsm/api/download_station/: task.py
src/synology_dsm/api/dsm/: information.py  network.py
src/synology_dsm/api/storage/: storage.py
src/synology_dsm/api/surveillance_station/: __init__.py  camera.py  const.py
synology/: __init__.py  synology.py
synology_dsm/: __init__.py  const.py  exceptions.py  helpers.py  synology_dsm.py
synology_dsm/api/core/: security.py  share.py  system.py  upgrade.py  utilization.py
synology_dsm/api/download_station/: __init__.py  task.py
synology_dsm/api/dsm/: information.py  network.py
synology_dsm/api/storage/: storage.py
synology_dsm/api/surveillance_station/: __init__.py  camera.py
tests/: __init__.py  conftest.py  const.py  const_dsm_5.py  const_dsm_6.py  test_synology_dsm.py  test_synology_dsm_5.py  test_synology_dsm_6.py  test_synology_dsm_7.py
tests/api_data/: __init__.py
tests/api_data/dsm_5/: __init__.py  const_5_api_auth.py  const_5_api_info.py
tests/api_data/dsm_5/core/: __init__.py  const_5_core_utilization.py
tests/api_data/dsm_6/: __init__.py  const_6_api_auth.py  const_6_api_info.py
tests/api_data/dsm_7/: __init__.py  const_7_api_auth.py  const_7_api_info.py
(+28 files in other folders)
