[tool.poetry]
name = "python-synology"
version = "1.0.0"
description = "Python API for communication with Synology DSM"
authors = ["Quentin POLLET (Quentame)", "FG van Zeelst (ProtoThis)"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/ProtoThis/python-synology"
repository = "https://github.com/ProtoThis/python-synology"
documentation = "https://python-synology.readthedocs.io"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries",
]
keywords=["synology-dsm", "synology"]
packages = [
    { include = "synology_dsm", from = "src" },
]

[tool.poetry.urls]
Changelog = "https://github.com/ProtoThis/python-synology/releases"

[tool.poetry.dependencies]
python = "^3.7.0"
requests = "^2.24.0"
urllib3 = "^1.25.10"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
coverage = {extras = ["toml"], version = "^5.3"}
safety = "^1.9.0"
mypy = "^0.790"
typeguard = "^2.9.1"
xdoctest = {extras = ["colors"], version = "^0.15.0"}
sphinx = "^3.2.1"
sphinx-autobuild = "^2020.9.1"
pre-commit = "^2.7.1"
flake8 = "^3.8.4"
black = "^20.8b1"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^20.1.4"
flake8-docstrings = "^1.5.0"
flake8-rst-docstrings = "^0.0.14"
pep8-naming = "^0.11.1"
darglint = "^1.5.5"
reorder-python-imports = "^2.3.5"
pre-commit-hooks = "^3.3.0"
sphinx-rtd-theme = "^0.5.0"
Pygments = "^2.7.1"

[tool.poetry.scripts]
python-synology = "synology_dsm.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["synology_dsm"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
